--- a/app.json
+++ b/app.json
@@ -111,6 +111,7 @@
       "desc": "你的位置信息将用于查找附近的商铺、校友和活动"
     }
   },
+  "qqmapKey": "JKGBZ-RNQCZ-4JDXO-ZWSSP-QKTCH-LKBR4",
   "debug": true,
   "sitemapLocation": "sitemap.json"
 }
