--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
     "pages/activity/detail/detail",
     "pages/notification/list/list",
     "pages/notification/detail/detail",
+    "pages/notification/notification-list/notification-list",
     "pages/benefit/list/list",
     "pages/benefit/detail/detail",
     "pages/my-follow/my-follow",
