--- a/app.json
+++ b/app.json
@@ -48,6 +48,8 @@
     "pages/audit/user/list/list",
     "pages/audit/content/list/list",
     "pages/audit/merchant/list/list",
+    "pages/audit/schooloffice/list/list",
+    "pages/audit/schooloffice/detail/detail",
     "pages/article/detail/detail",
     "pages/article/form/form",
     "pages/article/audit-list/audit-list",
