--- a/app.json
+++ b/app.json
@@ -16,6 +16,8 @@
     "pages/alumni-association/detail/detail",
     "pages/alumni-association/apply/apply",
     "pages/alumni-association/create/create",
+    "pages/alumni-association/organization/organization",
+    "pages/alumni-association/organization-detail/organization-detail",
     "pages/alumni/list/list",
     "pages/alumni/detail/detail",
     "pages/coupon/list/list",
