--- a/app.json
+++ b/app.json
@@ -53,6 +53,7 @@
     "pages/audit/merchant/list/list",
     "pages/audit/schooloffice/list/list",
     "pages/audit/schooloffice/detail/detail",
+    "pages/audit/schooloffice/organization/organization",
     "pages/article/detail/detail",
     "pages/article/form/form",
     "pages/article/audit-list/audit-list",
