--- a/app.json
+++ b/app.json
@@ -54,6 +54,7 @@
     "pages/audit/schooloffice/list/list",
     "pages/audit/schooloffice/detail/detail",
     "pages/audit/schooloffice/organization/organization",
+    "pages/audit/schooloffice/member/member",
     "pages/article/detail/detail",
     "pages/article/form/form",
     "pages/article/audit-list/audit-list",
