--- a/app.json
+++ b/app.json
@@ -59,6 +59,7 @@
     "pages/audit/schooloffice/list/list",
     "pages/audit/merchant/apply/apply",
     "pages/audit/merchant/apply-detail/apply-detail",
+    "pages/audit/merchant/shop-audit/shop-audit",
     "pages/audit/schooloffice/detail/detail",
     "pages/audit/schooloffice/organization/organization",
     "pages/audit/schooloffice/member/member",
