--- a/app.json
+++ b/app.json
@@ -56,6 +56,7 @@
     "pages/audit/merchant/architecture/architecture",
     "pages/audit/merchant/member/member",
     "pages/audit/merchant/coupon/coupon",
+    "pages/audit/merchant/coupon/verify/verify",
     "pages/audit/schooloffice/list/list",
     "pages/audit/merchant/apply/apply",
     "pages/audit/merchant/apply-detail/apply-detail",
