--- a/app.json
+++ b/app.json
@@ -57,6 +57,7 @@
     "pages/audit/merchant/member/member",
     "pages/audit/merchant/coupon/coupon",
     "pages/audit/merchant/coupon/verify/verify",
+    "pages/audit/merchant/topic/topic",
     "pages/audit/schooloffice/list/list",
     "pages/audit/merchant/apply/apply",
     "pages/audit/merchant/apply-detail/apply-detail",
