--- a/app.json
+++ b/app.json
@@ -59,6 +59,7 @@
     "pages/audit/merchant/coupon/verify/verify",
     "pages/audit/merchant/topic/topic",
     "pages/audit/merchant/topic/publish/publish",
+    "pages/audit/merchant/topic/edit/edit",
     "pages/audit/schooloffice/list/list",
     "pages/audit/merchant/apply/apply",
     "pages/audit/merchant/apply-detail/apply-detail",
