--- a/app.json
+++ b/app.json
@@ -48,6 +48,9 @@
     "pages/chat/detail/detail",
     "pages/my-favorites/my-favorites",
     "pages/audit/index/index",
+    "pages/audit/carousel/carousel",
+    "pages/audit/carousel/create/create",
+    "pages/audit/carousel/edit/edit",
     "pages/audit/list/list",
     "pages/audit/user/list/list",
     "pages/audit/content/list/list",
