--- a/app.json
+++ b/app.json
@@ -71,6 +71,7 @@
     "pages/audit/schooloffice/organization/organization",
     "pages/audit/schooloffice/member/member",
     "pages/audit/join-audit/index",
+    "pages/audit/article/manage/manage",
     "pages/article/detail/detail",
     "pages/article/form/form",
     "pages/article/audit-list/audit-list",
