--- a/app.json
+++ b/app.json
@@ -9,6 +9,7 @@
     "pages/profile/edit/edit",
     "pages/profile/privacy/privacy",
     "pages/profile/cooperation/cooperation",
+    "pages/profile/alumni-association/alumni-association",
     "pages/merchant/apply/apply",
     "pages/school/list/list",
     "pages/school/detail/detail",
