--- a/app.json
+++ b/app.json
@@ -78,7 +78,8 @@
     "pages/article/form/form",
     "pages/article/audit-list/audit-list",
     "pages/article/web-view/web-view",
-    "pages/article-publish/index/index"
+    "pages/article-publish/index/index",
+    "pages/activity/publish/publish"
   ],
   "window": {
     "backgroundTextStyle": "light",
