--- a/app.json
+++ b/app.json
@@ -45,6 +45,9 @@
     "pages/promotion/detail/detail",
     "pages/enterprise/list/list",
     "pages/enterprise/detail/detail",
+    "pages/enterprise/my-enterprise/my-enterprise",
+    "pages/enterprise/apply-enterprise/apply-enterprise",
+    "pages/enterprise/detail-new/detail-new",
     "pages/shop/list/list",
     "pages/shop/detail/detail",
     "pages/shop/shop-detail/shop-detail",
