--- a/app.json
+++ b/app.json
@@ -78,6 +78,7 @@
     "pages/audit/schooloffice/member/member",
     "pages/audit/join-audit/index",
     "pages/audit/article/manage/manage",
+    "pages/audit/enterprise/index",
     "pages/article/detail/detail",
     "pages/article/form/form",
     "pages/article/audit-list/audit-list",
