--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/profile/privacy/privacy",
     "pages/profile/cooperation/cooperation",
     "pages/profile/alumni-association/alumni-association",
+    "pages/profile/my-card/my-card",
     "pages/merchant/apply/apply",
     "pages/school/list/list",
     "pages/school/detail/detail",
