--- a/apps/mini-app/package.json
+++ b/apps/mini-app/package.json
@@ -1,6 +1,23 @@
 {
+  "name": "mini-app",
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write \"**/*.{js,json,wxss,wxml}\""
+  },
   "dependencies": {
     "crypto-js": "^4.2.0",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "@babel/eslint-parser": "^7.28.6",
+    "@eslint/js": "^10.0.1",
+    "eslint": "^10.0.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.5",
+    "globals": "^17.3.0",
+    "prettier": "^3.8.1"
   }
 }
