Squashed 'apps/server-java/' changes from 4b535fe..137a99d
137a99d feat&fix：更新 websocket以及新增一些 dto
dd63539 feat&fix：更新 websocket以及新增一些 dto
a352853 feat&fix：更新 websocket以及新增一些 dto

git-subtree-dir: apps/server-java
git-subtree-split: 137a99d85ce303fe6408a53948ed77f898b4d3ff

--- a/alumni-common/pom.xml
+++ b/alumni-common/pom.xml
@@ -93,5 +93,15 @@
             <groupId>io.netty</groupId>
             <artifactId>netty-codec-http</artifactId>
         </dependency>
+        <!-- Jakarta WebSocket API -->
+        <dependency>
+            <groupId>jakarta.websocket</groupId>
+            <artifactId>jakarta.websocket-api</artifactId>
+        </dependency>
+        <!-- WebSocket implementation for embedded Tomcat -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
     </dependencies>
 </project>
