--- a/.gitignore
+++ b/.gitignore
@@ -39,10 +39,13 @@ logs/**
 
 alumni-main/logs/**
 alumni-main/src/main/resources/application-local.yaml
-alumni-main/src/main/resources/application-prod.yaml
 
 elasticsearch/**/**/**
 
-.env.example
+# Environment variables (keep .env.example for reference)
+.env
+.env.local
+.env.*.local
+
 docker-compose-kafka.yml
 docker-compose-kafka-prod.yml
