Squashed 'apps/server-java/' changes from 137a99d..9aa2178
9aa2178 fix：更新 ES 使用，添加认证，之前的不存在 http 的认证，导致云托管报错
42a8250 fix: 新增 ES 的认证变量

git-subtree-dir: apps/server-java
git-subtree-split: 9aa21788fae4efc34d0e073368f7a6ad6ff5c760

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,8 @@ KAFKA_BOOTSTRAP_SERVERS=xxxx
 
 # ==================== Elasticsearch 配置 ====================
 ELASTICSEARCH_HOST=http://xxxx
+ELASTICSEARCH_USERNAME=elastic
+ELASTICSEARCH_PASSWORD=change_me_in_production
 
 # ==================== Canal 配置 ====================
 CANAL_ENABLED=true
