--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ logs/
 
 # OS
 .DS_Store
+**/.DS_Store
 Thumbs.db
 .AppleDouble
 .LSOverride
@@ -51,3 +52,8 @@ yarn.lock
 
 # Project specific
 PROJECT_EVALUATION.md
+
+# Deploy configs (only allow .example files)
+deploy/**/*.sh
+deploy/**/*.conf
+!deploy/**/*.example
