--- a/apps/server-java/alumni-main/src/main/resources/application.yaml
+++ b/apps/server-java/alumni-main/src/main/resources/application.yaml
@@ -138,6 +138,15 @@ file:
   upload-image-url: images     # 图片文件存储的三级目录  eg: /yannqing/upload/images/**     对应 url 路径：127.0.0.1:8080/upload/images/**
   upload-resume-url: resumes   # 简历文件存储的三级目录  eg: /yannqing/upload/resumes/**    对应 url 路径：127.0.0.1:8080/upload/resumes/**
   upload-audio-url: audios     # 音频文件存储的三级目录  eg: /yannqing/upload/audios/**     对应 url 路径：127.0.0.1:8080/upload/audios/**
+  storage-type: local  # 文件存储类型: local(本地存储) 或 cos(微信云托管对象存储)
+
+# 微信云托管对象存储配置（本地开发不需要配置）
+cloudbase:
+  cos:
+    region: ap-shanghai
+    bucket-name: ""
+    base-url: ""
+    upload-path: cni-alumni
 
 # 雪花算法 id
 snowflake:
@@ -149,6 +158,8 @@ wechat:
   mini:
     app-id: ${WECHAT_MINI_APP_ID:your_app_id_here}  # 微信小程序AppID
     secret: ${WECHAT_MINI_SECRET:your_secret_here}  # 微信小程序Secret
+  api:
+    base-url: https://api.weixin.qq.com  # 微信API基础URL（非云托管环境使用 https）
 
 # JWT配置
 jwt:
