--- a/apps/server-java/pom.xml
+++ b/apps/server-java/pom.xml
@@ -61,6 +61,7 @@
         <elasticsearch.version>8.13.4</elasticsearch.version>
         <spring-data-elasticsearch.version>5.3.0</spring-data-elasticsearch.version>
         <caffeine.version>3.1.8</caffeine.version>
+        <cos.version>5.6.155</cos.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -202,6 +203,13 @@
                 <groupId>commons-codec</groupId>
                 <artifactId>commons-codec</artifactId>
                 <version>${commons-codec.version}</version>
+            </dependency>
+
+            <!-- Tencent Cloud COS SDK -->
+            <dependency>
+                <groupId>com.qcloud</groupId>
+                <artifactId>cos_api</artifactId>
+                <version>${cos.version}</version>
             </dependency>
 
             <!-- Internal modules -->
