update: switch appid to another

--- a/apps/mini-app/project.config.json
+++ b/apps/mini-app/project.config.json
@@ -30,7 +30,7 @@
     "ignore": [],
     "include": []
   },
-  "appid": "${WECHAT_MINI_APP_ID_OLD}",
+  "appid": "${WECHAT_MINI_APP_ID}",
   "editorSetting": {},
   "libVersion": "3.14.1"
 }
