update: switch appid to another

--- a/apps/mini-app/project.config.json
+++ b/apps/mini-app/project.config.json
@@ -30,7 +30,7 @@
     "ignore": [],
     "include": []
   },
-  "appid": "wx8558d73d03d676a8",
+  "appid": "wxfd960d46f387d09b",
   "editorSetting": {},
   "libVersion": "3.14.1"
 }
