--- a/apps/server-java/alumni-main/src/main/resources/application.yaml
+++ b/apps/server-java/alumni-main/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 app:
-  url: http://localhost:8080
+  url: ${APP_URL:http://localhost:8080}
 spring:
   application:
     name: cni-alumni-core
@@ -8,9 +8,9 @@ spring:
   # 数据库配置
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/cni_alumni?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&connectionTimeZone=Asia/Shanghai&forceConnectionTimeZoneToSession=true&useSSL=false&allowPublicKeyRetrieval=true
-    username: root
-    password: ${DB_PASSWORD}
+    url: jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DATABASE:cni_alumni}?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Shanghai&connectionTimeZone=Asia/Shanghai&forceConnectionTimeZoneToSession=true&useSSL=false&allowPublicKeyRetrieval=true
+    username: ${MYSQL_USERNAME:root}
+    password: ${MYSQL_PASSWORD}
     druid:
       initial-size: 5          # 根据预期并发调整
       min-idle: 5
