--- a/apps/server-java/alumni-main/src/main/resources/application-prod.yaml
+++ b/apps/server-java/alumni-main/src/main/resources/application-prod.yaml
@@ -126,8 +126,8 @@ file:
 cloudbase:
   cos:
     region: ap-shanghai  # 存储桶地域
-    bucket-name: 7072-${CLOUD_ENV_ID}-1373505745  # 存储桶名称
-    base-url: https://7072-${CLOUD_ENV_ID}-1373505745.tcb.qcloud.la  # 访问域名（tcb.qcloud.la）
+    bucket-name: ${CLOUD_ENV_ID}  # 存储桶名称
+    base-url: https://${CLOUD_ENV_ID}.tcb.qcloud.la  # 访问域名（tcb.qcloud.la）
     upload-path: cni-alumni  # 文件上传路径前缀
 
 # 雪花算法 id
