--- a/apps/mini-app/app.json
+++ b/apps/mini-app/app.json
@@ -14,6 +14,7 @@
     "pages/merchant/apply/apply",
     "pages/school/list/list",
     "pages/school/detail/detail",
+    "pages/school/create/create",
     "pages/alumni-association/list/list",
     "pages/alumni-association/detail/detail",
     "pages/alumni-association/apply/apply",
@@ -81,6 +82,7 @@
     "pages/audit/join-audit/index",
     "pages/audit/article/manage/manage",
     "pages/audit/enterprise/index",
+    "pages/audit/headquarters/list/list",
     "pages/article/detail/detail",
     "pages/article/form/form",
     "pages/article/audit-list/audit-list",
